new changes for restaurant service